WIP sequencememory game logic

--- a/sequencememory/index.html
+++ b/sequencememory/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sequence Memory</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,17 +14,20 @@
     />
   </head>
   <body>
+    <div id="sequenceStartBtnDiv">
+      <button class="btn" id="gameStartBtn">Start Game</button>
+    </div>
     <div id="gameContainer">
       <div id="sequenceButtonsContainer">
-        <div class="sequenceButtons"></div>
-        <div class="sequenceButtons"></div>
-        <div class="sequenceButtons"></div>
-        <div class="sequenceButtons"></div>
-        <div class="sequenceButtons"></div>
-        <div class="sequenceButtons"></div>
-        <div class="sequenceButtons"></div>
-        <div class="sequenceButtons"></div>
-        <div class="sequenceButtons"></div>
+        <div class="sequenceButtons" id="sequenceBtn1"></div>
+        <div class="sequenceButtons" id="sequenceBtn2"></div>
+        <div class="sequenceButtons" id="sequenceBtn3"></div>
+        <div class="sequenceButtons" id="sequenceBtn4"></div>
+        <div class="sequenceButtons" id="sequenceBtn5"></div>
+        <div class="sequenceButtons" id="sequenceBtn6"></div>
+        <div class="sequenceButtons" id="sequenceBtn7"></div>
+        <div class="sequenceButtons" id="sequenceBtn8"></div>
+        <div class="sequenceButtons" id="sequenceBtn9"></div>
     </div>
   </body>
 </html>
